@@ -30,23 +30,26 @@
         (mosh file))
 
 (define (main args)
-  (exit)
-
   (format #t ";; Do not edit this file which generated by ~a.\n;;\n" (first args))
-  (display "(define titlecase-alist '(")
-  (let loop ([lst (filter (lambda (x) x)
-                          (map (lambda (line) (#/^([^\;]+)\;[^\;]*\;[^\;]*\;[^\;]*\;[^\;]*\;[^\;]*\;[^\;]*\;[^\;]*\;[^\;]*\;[^\;]*\;[^\;]*\;[^\;]*\;[^\;]*\;[^\;]*\;(.*)/ line)) (file->list "data/UnicodeData.txt")))]
-             [index 0])
+  (display "(define other-alphabetic-list '(")
+  (let loop ([lines (file->list "data/PropList.txt")])
     (cond
-     [(null? lst) '()]
-     [(and (car lst) ((car lst) 2))
-      (if (zero? (mod index 5))
-            (display "\n    ")
-            (display " "))
-        (format #t "(~a . ~a)" (string->number ((car lst) 1) 16) (string->number ((car lst) 2) 16))
-      (loop (cdr lst) (+ index 1))]
+     [(null? lines) (display "))")]
+     [(#/0*([\dA-F]+)\.\.0*([\dA-F]+)\s+\; Other_Alphabetic.*/ (car lines))
+      => (lambda (match)
+           (let next ([start (string->number (match 1) 16)]
+                      [end   (string->number (match 2) 16)])
+             (cond
+              [(> start end) '()]
+              [else
+               (format #t " ~d" start)
+               (next (+ start 1) end)]))
+           (loop (cdr lines)))]
+     [(#/0*([\dA-F]+)\s+\; Other_Alphabetic.*/ (car lines))
+      => (lambda (match)
+           (format #t " ~a" (string->number (match 1) 16))
+           (loop (cdr lines)))]
      [else
-      (loop (cdr lst) index)]))
-  (display "))"))
+      (loop (cdr lines))])))
 
 (main (command-line))
