@@ -1,3 +1,7 @@
+2008-09-25  higepon  <higepon@users.sourceforge.jp>
+
+        * unicode/make-other-alphabetic-datum.scm: Added for parsing PropList.txt.
+
 2008-09-24  higepon  <higepon@users.sourceforge.jp>
 
         * lib/mosh/unicode.ss : Added char-ci=?, char-ci>=?, char-ci<=?, char-ci<? and char-ci>?.
